# Forza-AI

./: .gitignore  README.md  basic.prompt.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pylint.yml
configs/: horizon.toml  motorsport.toml
configs/rewards/: horizon.json  motorsport.json
configs/vision/: horizon.json  motorsport.json
docs/: design.md
forza_ai/: __init__.py  cli.py  config.py  controller.py  learning.py  paths.py  policy.py  redline.py  reward_config.py  session_log.py  telemetry.py  terminal_ui.py  terrain.py  trainer.py  transmission.py  user_input.py  vision.py  vision_classifier.py  vision_models.py  vision_sampler.py  vision_training.py
forza_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_learning.py  test_paths.py  test_policy.py  test_redline.py  test_session_log.py  test_telemetry.py  test_terminal_ui.py  test_terrain.py  test_transmission.py  test_user_input.py  test_vision.py  test_vision_training.py
