[project]
name = "forza-ai"
version = "0.1.0"
description = "Experimental Forza Horizon telemetry learner and virtual Xbox controller driver."
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "tomli>=2.0; python_version < '3.11'",
  "vgamepad>=0.1.0",
]

[project.scripts]
forza-ai = "forza_ai.cli:main"

[tool.setuptools]
packages = ["forza_ai"]
