[project]
name = "forza-ai"
version = "0.1.0"
description = "Experimental Forza Horizon telemetry learner and virtual Xbox controller driver."
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "tomli>=2.0; python_version < '3.11'",
  "vgamepad>=0.1.0",
]

[project.optional-dependencies]
vision = [
  "Pillow>=10.0",
  "pytesseract>=0.3.10",
  "transformers>=4.30",
  "torchvision>=0.15.0",
]

[project.scripts]
forza-ai = "forza_ai.cli:main"

[tool.setuptools]
packages = ["forza_ai"]
